--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
         <nav id="bottom-nav-bar">
             <ul class="bottom-list-container">
                 <li>
-                    <a class="bottom-link" href="#">Contact Us</a>
+                    <a class="bottom-link" asp-area="Main" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                 </li>
                 <li>
                     <a class="bottom-link" asp-area="Main" asp-controller="Home" asp-action="About">About Us</a>
