--- a/TwinsArtstyle/Areas/Main/Views/User/Register.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/User/Register.cshtml
@@ -16,13 +16,18 @@
             </div>
             <div class="form-floating">
                 <label asp-for="LastName"></label>
-                <input asp-for="LastName" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="LastName" class="form-control" aria-required="true" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="Email" class="form-control" aria-required="true" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <label asp-for="PhoneNumber"></label>
+                <input asp-for="PhoneNumber" class="form-control" aria-required="true" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <label asp-for="Password"></label>
