--- a/TwinsArtstyle/wwwroot/css/site.css
+++ b/TwinsArtstyle/wwwroot/css/site.css
@@ -330,6 +330,7 @@ li.about-text{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 10px;
 }
 
 .product-details > hr{
@@ -408,4 +409,21 @@ li.about-text{
     padding: 20px;
     box-shadow: 7px 7px 10px #333;
     justify-content: space-between;
+}
+
+.contact-form{
+    width: 500px;
+    max-width: 500px;
+    background-color: #eee;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 7px #333;
+    margin: 3% auto;
+    font-family:  'Sansita Swashed', cursive;
+}
+
+#contact-form-body{
+    height: 300px;
+    max-height: 300px;
+    text-align: start;
 }
