--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,13 +52,10 @@
             <a asp-area="Admin" asp-controller="Orders" asp-action="All" class="left-nav-text pointer-cursor">Orders</a>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Inbox</span>
+            <a asp-area="Admin" asp-controller="Inbox" asp-action="All" class="left-nav-text pointer-cursor">Inbox</a>
         </div>
         <div class="item">
             <a asp-area="Admin" asp-controller="Roles" asp-action="Manage" class="left-nav-text pointer-cursor">Manage Roles</a>
-        </div>
-        <div class="item">
-            <span class="left-nav-text pointer-cursor">Manage Claims</span>
         </div>
         <div class="item">
             <a asp-area="Admin" asp-controller="Administrators" asp-action="Add" class="left-nav-text pointer-cursor">Administrators</a>
