--- a/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<MessageViewModel>
 
+@{
+    ViewData["Title"] = "Inbox";
+}
+
 <div class="messages-container">
     <table class="messages-table">
         <thead>
