--- a/TwinsArtstyle/Areas/Admin/Views/Orders/Details.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Orders/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿@model AdminAreaOrderViewModel
 
+@{
+    ViewData["Title"] = $"Order #{Model.OrderId}";
+}
+
 <div class="order-details">
     <div class="products">
         <table class="products-table">
