--- a/TwinsArtstyle/Areas/Admin/Views/Roles/Manage.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Roles/Manage.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<RoleViewModel>
 
+@{
+    ViewData["Title"] = "Roles";
+}
+
 <div id="roles">
     <div class="panel">
         <h3>Roles</h3>
