--- a/TwinsArtstyle/Areas/Main/Views/Home/About.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Home/About.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "About us";
+}
+
 <div class="about-contact-card">
     <div class="about-us-container">
         <span class="about-text">
