--- a/TwinsArtstyle/Areas/Main/Views/Home/AccessDenied.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Home/AccessDenied.cshtml
@@ -1,4 +1,8 @@
-﻿<div id="access-denied">
+﻿@{
+    ViewData["Title"] = "Access denied!";
+}
+
+<div id="access-denied">
     <img src="~/images/lock.png" />
     <span id="status-code">403 Forbidden</span>
     <span id="access-denied-text">Looks like you tried to access a restricted resource. Don't let it happen again!</span>
