--- a/TwinsArtstyle/Areas/Main/Views/Home/Index.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Twins Artstyle - Рисунки за всички";
+    ViewData["Title"] = "Twins Artstyle";
 }
 
 <div id="welcome">
