--- a/TwinsArtstyle/Areas/Main/Views/Products/Details.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Products/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ProductViewModel
 
+@{
+    ViewData["Title"] = $"{Model.Name}";
+}
+
 <div class="product-detail-container">
     <div class="product-detail-card">
         <div class="product-image">
