--- a/TwinsArtstyle/Areas/Admin/Views/Products/Manage.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Products/Manage.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<ProductViewModel>
 
+@{
+    ViewData["Title"] = "Products";
+}
+
 <div id="add-product">
     <form asp-area="Admin" asp-controller="Products" asp-action="Manage" enctype="multipart/form-data" method="post">
         <div class="panel">
