--- a/TwinsArtstyle/Areas/Admin/Views/Products/_ProductPartial.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Products/_ProductPartial.cshtml
@@ -14,6 +14,6 @@
         <span class="price form-label">@Model.Price лв.</span>
     </div>
     <a asp-area="Admin" asp-controller="Products" asp-action="Delete" asp-route-productId="@Model.Id">
-        <i class="bi bi-x-lg action-icon delete"></i>
+        <i class="bi bi-trash-fill action-icon delete"></i>
     </a>
 </div>
