--- a/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
@@ -1,22 +1,27 @@
-﻿@model IEnumerable<CartProductViewModel>
+﻿@using TwinsArtstyle.Services.DTOs
+
+@model CartDTO
 
 <div class="cart-items">
     <ul class="items">
 
-        @foreach (var item in Model)
+        @if (Model.Products.Count != 0)
         {
-            <li full-price="@item.Product.Price * @item.Count" class="cart-item" id="@item.Product.Id">
-                <img src="@item.Product.ImageUrl" class="item-image">
-                <span class="item-name">@item.Product.Name</span>
-                <input disabled="disabled" type="number" class="quantity" value="@item.Count" max="99">
-                <i class="remove-item bi bi-trash-fill"></i>
-            </li>
+            @foreach (var item in Model.Products)
+            {
+                <li full-price="@item.Product.Price * @item.Count" class="cart-item" id="@item.Product.Id">
+                    <img src="@item.Product.ImageUrl" class="item-image">
+                    <span class="item-name">@item.Product.Name</span>
+                    <input disabled="disabled" type="number" class="quantity" value="@item.Count" max="99">
+                    <i class="remove-item bi bi-trash-fill"></i>
+                </li>
+            }
         }
 
     </ul>
     <br />
 
-    @if (Model.Count() == 0)
+    @if (Model.Products.Count() == 0)
     {
         <hr />
         <div style="display: none" class="total-price-container">
@@ -30,7 +35,7 @@
     {
         <hr />
         <div class="total-price-container">
-            Total price: <span class="total-price">@Model.Sum(p => p.Product.Price * p.Count)</span> лв.
+            Total price: <span class="total-price">@Model.Products.Sum(p => p.Product.Price * p.Count)</span> лв.
         </div>
         <div class="order-container">
             <a class="place-order" asp-area="Main" asp-controller="Cart" asp-action="PlaceOrder">Place order</a>
