--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -2,13 +2,12 @@
 @using System.Text
 @using Microsoft.Extensions.Caching.Distributed
 @using TwinsArtstyle.Services.Constants
-@using TwinsArtstyle.Services.DTOs
 @using TwinsArtstyle.Services.Interfaces
 @inject IDistributedCache _cache
 @inject ICacheSerializer _cacheSerializer
 
 @{
-    var userCartDTO = new CartDTO();
+    var userCart = Enumerable.Empty<CartProductViewModel>();
 
     if(User.Identity.IsAuthenticated)
     {
@@ -17,7 +16,7 @@
 
         if(userCartBytes != null)
         {
-            userCartDTO = _cacheSerializer.DeserializeFromByteArray<CartDTO>(userCartBytes);
+            userCart = _cacheSerializer.DeserializeFromByteArray<IEnumerable<CartProductViewModel>>(userCartBytes);
         }
     }
 }
@@ -55,7 +54,7 @@
                             <button class="top-cart-button top-cart animate-background-color" dropdown-button>Cart</button>
                         </div>
                         <div class="cart">
-                            <partial name="_CartPartial" model="userCartDTO"/>
+                            <partial name="_CartPartial" model="userCart"/>
                         </div>
                     </div>
                 </li>
