If cached data cant be fetched from the cache for some reason, it will be retrieved from the database instead.

--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 @using TwinsArtstyle.Services.Interfaces
 @inject IDistributedCache _cache
 @inject ICacheSerializer _cacheSerializer
+@inject ICartService _cartService
 
 @{
     var userCart = Enumerable.Empty<CartProductViewModel>();
