Added fetching user's cart items from the database in the Layout view.

--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -19,6 +19,10 @@
         {
             userCart = _cacheSerializer.DeserializeFromByteArray<IEnumerable<CartProductViewModel>>(userCartBytes);
         }
+        else
+        {
+            userCart = await _cartService.GetProductsForUser(User.FindFirst(ClaimTypes.NameIdentifier).Value);
+        }
     }
 }
 
