--- a/TwinsArtstyle/Areas/Admin/Views/Orders/Details.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Orders/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model AdminAreaOrderViewModel
+﻿@using TwinsArtstyle.Services.Enums
+@model AdminAreaOrderViewModel
 
 @{
     ViewData["Title"] = $"Order #{Model.OrderId}";
@@ -44,15 +45,19 @@
     <span class="total-price">Total price: @Model.TotalPrice лв.</span>
 
     <form asp-action="ChangeOrderStatus" asp-controller="Orders" asp-area="Admin" method="get">
-        <input name="orderId" type="hidden" value="@Model.OrderId"/>
-        <span>Current order status: @Model.Status</span>    
+        <input name="orderId" type="hidden" value="@Model.OrderId" />
+        <span>Current order status: @Model.Status</span>
+        <br />
         <br />
 
         <span>Change order status to: </span>
         <select name="newStatus" class="order-status">
-            <option>Confirmed</option>
-            <option>Sent</option>
-            <option>Finished</option>
+
+            @foreach (var orderStatus in Enum.GetNames<OrderStatus>())
+            {
+                <option>@orderStatus</option>
+            }
+
         </select>
         <div class="submit-button-container">
             <button class="submit" asp-action="ChangeOrderStatus" asp-controller="Orders" asp-area="Admin">Change order status</button>
