Added a middleware to load cart items into cache if they are not there, set the sliding expiration of the cart items to 20 minutes and added a details view for the messages sent by the clients.

--- a/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
@@ -10,6 +10,7 @@
             <tr>
                 <th>Title</th>
                 <th>From</th>
+                <th>Details</th>
             </tr>
         </thead>
         <tbody>
@@ -19,6 +20,9 @@
                 <tr>
                     <td>@message.Title</td>
                     <td>@message.User.FirstName @message.User.LastName</td>
+                    <td>
+                        <a asp-route-messageId="@message.Id" class="submit" asp-action="Details" asp-controller="Inbox" asp-area="Admin">Details</a>
+                    </td>
                 </tr>
             }
 
