Fixed a foreign key error when deleting an user.

--- a/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Inbox/All.cshtml
@@ -19,7 +19,7 @@
             {
                 <tr>
                     <td>@message.Title</td>
-                    <td>@message.User.FirstName @message.User.LastName</td>
+                    <td>@message.User.Email</td>
                     <td>
                         <a asp-route-messageId="@message.Id" class="submit" asp-action="Details" asp-controller="Inbox" asp-area="Admin">Details</a>
                     </td>
